# AdaptiveRag

./: README.md
backend/: adaptive_rag.py  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  axios.js
